--- a/phone.htm
+++ b/phone.htm
@@ -325,103 +325,52 @@ Mugen Power 3.7V 2400mA電池</a><br>
     <a href="phone/n900_debian_build_kernel_5_3_0.htm">
     Build Kernel 5.3.0</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/mount_sd.htm">
-        如何透過USB存取SDCard</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_fix_usb.htm">
+    解決Unable to initialize libusb -99問題</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/g_nokia.htm">
-        如何透過USB登入SSH、VNC</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/chsh.htm">
-        解決登入需要執行bash的問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/xfce4_tab.htm">
-        解決VNC下無法使用TAB的問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/lock_key.htm">
-        實做Lock Key功能(Kernel)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/suspend.htm">
-        解決Suspend被音量鍵喚醒的問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/vnc_copy_paste.htm">
-        解決VNC下無法使用Copy、Paste的問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/fix_wlan_mac.htm">
-        解決wlan0 randomized MAC address問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/light_adjust.htm">
-        實做自動調節屏亮度以及鍵盤背光功能(Kernel)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/fix_usb.htm">
-        解決"unable to initialize libusb -99"問題</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/fix_jessie_key.htm">
-        解決"Debian 8 ... public key is not available"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_fix_jessie_key.htm">
+    解決Debian 8 public key is not available問題</a><br>
 
 &oplus;
 <b>PostmarketOS</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_keyboard.htm">
     鍵盤組合鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/scr.htm">
-    boot.scr</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_boot_scr.htm">
+    Boot.scr</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/conf.htm">
-    i3wm conf</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_i3_cfg.htm">
+    i3wm config</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/uart.htm">
-    使用UART傳輸</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_bootmenu_scr.htm">
+    Bootmenu.scr</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/menuscr.htm">
-    bootmenu.scr</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_nand_boot.htm">
+    如何從Flash開機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/nand_boot.htm">
-    如何從內部NAND開機</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_fix_make_error_137.htm">
+    解決Make error 137問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/build_kernel.htm">
-    build kernel 5.3.2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/fix_make_error_137.htm">
-    解決"make error 137"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/pack_uinitrd.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_pack_uinitrd.htm">
     Pack uInitrd-postmarketos-stable</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/postmarketos/unpack_uinitrd.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_postmarketos_unpack_uinitrd.htm">
     Unpack uInitrd-postmarketos-stable</a><br>
-
-&oplus;
-<b>Maemo Leste</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/leste/setup.htm">
-    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="astro"></div>
