--- a/handheld/pandora_1ghz_spec.htm
+++ b/handheld/pandora_1ghz_spec.htm
@@ -14,7 +14,7 @@
     <tr><th>SLOT</th><td>SD (x2)</td></tr>
     <tr><th>PORT</th><td>USB A, USB Mini B, 3.5mm Jack</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
-    <tr><th>BATTERY</th><td>4000mA</td></tr>
+    <tr><th>BATTERY</th><td>3.7v 4000mA</td></tr>
     <tr><th>DIMENSION</th><td>140.29mm x 83.48mm x 29.25mm</td></tr>
     <tr><th>WEIGHT</th><td>320g</td></tr>
 </table>
