--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
     <a href="#pandora1">        <img src="img/photos/pandora.jpg"           class="t0" title="Pandora (1GHz)"/></a>
     <a href="#pandora2">        <img src="img/photos/pandora.jpg"           class="t0" title="Pandora (Rebirth)"/></a>
     <a href="#pandora3">        <img src="img/photos/pandora.jpg"           class="t0" title="Pandora (Classic)"/></a>
+    <a href="#a320">            <img src="img/photos/a320.jpg"              class="t0" title="Dingoo A320"/></a>
     <a href="#pyra">            <img src="img/photos/pyra.jpg"              class="t0" title="Pyra"/></a>
     <a href="#gaviar">          <img src="img/photos/gaviar.jpg"            class="t0" title="Gaviar (小志掌機)"/></a>
     <a href="#handmade01">      <img src="img/photos/handmade01.jpg"        class="t0" title="Handmade01 (黑妹01)"/></a>
@@ -29,7 +30,6 @@
     <a href="#f300">            <img src="img/photos/f300.jpg"              class="t0" title="GP2X F300"/></a>
     <a href="#caanoo">          <img src="img/photos/caanoo.jpg"            class="t0" title="GP2X Caanoo"/></a>
     <a href="#leapfrog">        <img src="img/photos/leapfrog.jpg"          class="t0" title="LeapFrog Didj"/></a>
-    <a href="#a320">            <img src="img/photos/a320.jpg"              class="t0" title="Dingoo A320"/></a>
     <a href="#x760p">           <img src="img/photos/x760p.jpg"             class="t0" title="Gemei X760+"/></a>
     <a href="#ga330">           <img src="img/photos/ga330.jpg"             class="t0" title="Gemei A330"/></a>
     <a href="#a330">            <img src="img/photos/a330.jpg"              class="t0" title="Dingoo Tech A330"/></a>
@@ -513,6 +513,234 @@ UART改造</a><br>
 解決電池(Out of Temperature)問題</a>
 <br><br><br><br>
 
+<div id="a320"></div>
+<h3><img src="img/photos/a320.jpg" class="floatLeft"/>
+Dingoo A320</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/a320_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/a320_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/a320_shell_color.htm">
+更換顏色</a><br>
+
+&dash;
+<a href="handheld/a320_button.htm">
+更換按鈕</a><br>
+
+&lowast;
+<a href="handheld/a320/uart.htm">
+焊接UART接頭</a><br>
+
+&lowast;
+<a href="handheld/a320/psx_ultra.htm">
+PSX Ultra Ripper</a><br>
+
+&lowast;
+<a href="handheld/a320/tft_ili9325.htm">
+更換螢幕(2.8吋 TFT ILI9325)</a><br>
+
+&lowast;
+<a href="handheld/a320/ips_ili9340.htm">
+更換螢幕(2.6吋 IPS ILI9340)</a><br>
+
+&lowast;
+<a href="handheld/a320/ips_s6d04m0x21.htm">
+更換螢幕(2.8吋 IPS S6D04M0X21)</a><br>
+
+&lowast;
+<a href="handheld/a320/oled_s6e63d6.htm">
+更換螢幕(2.8吋 OLED S6E63D6)</a><br>
+
+&oplus;
+<b>Dingoo</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/unbrick.htm">
+    Unbrick Tool</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/parse_app.htm">
+    解析App文件格式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/os_flash.htm">
+    安裝系統(Flash)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/fix_ili9325.htm">
+    修正ILI9325豎紋問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/patch_ili9340.htm">
+    Patch ILI9338.DL(支援ILI9340)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingoo/patch_s6d04m0x21.htm">
+    Patch ILI9338.DL(支援S6D04M0X21)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    S2D SDK<br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="handheld/a320/dingoo/s2d/setup_windows.htm">
+        開發環境(Windows)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    Dingoo SDK<br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="handheld/a320/dingoo/sdk/setup_ubuntu.htm">
+        開發環境(Ubuntu)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="handheld/a320/dingoo/sdk/setup_windows.htm">
+        開發環境(Windows)</a><br>
+
+&oplus;
+<b>Dual Boot</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dualboot/ili9340.htm">
+    支援ILI9340</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dualboot/s6d04m0x21.htm">
+    支援S6D04M0X21</a><br>
+
+&oplus;
+<b>Dingux</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/os_minisd.htm">
+    安裝系統(MiniSD)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_fba.htm">
+    build fba</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_fba-sdl.htm">
+    build fba-sdl</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_fba-capex.htm">
+    build fba-capex</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_fceu.htm">
+    build fceu</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_uboot.htm">
+    build uboot</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_snes9x.htm">
+    build snes9x</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_gnuboy.htm">
+    build gnuboy</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_hwinit.htm">
+    build hwinit</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_kernel.htm">
+    build kernel</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_psx4all.htm">
+    build psx4all</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_gmenu2x.htm">
+    build gmenu2x</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_openbor.htm">
+    build openbor</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_mame4all.htm">
+    build mame4all</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/build_libao-1.2.0.htm">
+    build libao-1.2.0</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/port_ili9340.htm">
+    移植ILI9340驅動程式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/dingux/port_s6d04m0x21.htm">
+    移植S6D04M0X21驅動程式</a><br>
+
+&oplus;
+<b>OpenDingux</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/os_qemu.htm">
+    安裝系統(QEMU)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/os_minisd.htm">
+    安裝系統(MiniSD)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/build_qemu.htm">
+    build qemu</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/build_kernel.htm">
+    build kernel</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/build_ubiboot.htm">
+    build ubiboot</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/build_buildroot.htm">
+    build buildroot</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/fix_ili9338.htm">
+    修正ILI9338青藍色問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/port_ili9340.htm">
+    移植ILI9340驅動程式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/port_s6d04m0x21.htm">
+    移植S6D04M0X21驅動程式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/sdcard_64g.htm">
+    如何使用超過64G的SDCard</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/fix_itemx_follow_item.htm">
+    解決"@itemx must follow @item"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/fix_end_multitable.htm">
+    解決"no matching @end multitable"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/a320/opendingux/fix_pl_defined.htm">
+    解決"Can't use 'defined(@array)' ... line 373."</a><br>
+<br><br><br><br>
+
 <div id="pyra"></div>
 <h3><img src="img/photos/pyra.jpg" class="floatLeft"/>
 Pyra</h3>
@@ -992,234 +1220,6 @@ LeapFrog Didj</h3>
 &lowast;
 <a href="handheld/leapfrog/screen.htm">
 可視角</a><br>
-<br><br><br><br>
-
-<div id="a320"></div>
-<h3><img src="img/photos/a320.jpg" class="floatLeft"/>
-Dingoo A320</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="handheld/a320/review.htm">
-介紹</a><br>
-
-&lowast;
-<a href="handheld/a320/teardown.htm">
-拆機</a><br>
-
-&lowast;
-<a href="handheld/a320/color.htm">
-更換顏色</a><br>
-
-&lowast;
-<a href="handheld/a320/dpad.htm">
-更換按鈕</a><br>
-
-&lowast;
-<a href="handheld/a320/uart.htm">
-焊接UART接頭</a><br>
-
-&lowast;
-<a href="handheld/a320/psx_ultra.htm">
-PSX Ultra Ripper</a><br>
-
-&lowast;
-<a href="handheld/a320/tft_ili9325.htm">
-更換螢幕(2.8吋 TFT ILI9325)</a><br>
-
-&lowast;
-<a href="handheld/a320/ips_ili9340.htm">
-更換螢幕(2.6吋 IPS ILI9340)</a><br>
-
-&lowast;
-<a href="handheld/a320/ips_s6d04m0x21.htm">
-更換螢幕(2.8吋 IPS S6D04M0X21)</a><br>
-
-&lowast;
-<a href="handheld/a320/oled_s6e63d6.htm">
-更換螢幕(2.8吋 OLED S6E63D6)</a><br>
-
-&oplus;
-<b>Dingoo</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/unbrick.htm">
-    Unbrick Tool</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/parse_app.htm">
-    解析App文件格式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/os_flash.htm">
-    安裝系統(Flash)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/fix_ili9325.htm">
-    修正ILI9325豎紋問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/patch_ili9340.htm">
-    Patch ILI9338.DL(支援ILI9340)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/patch_s6d04m0x21.htm">
-    Patch ILI9338.DL(支援S6D04M0X21)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    S2D SDK<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/s2d/setup_windows.htm">
-        開發環境(Windows)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Dingoo SDK<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/sdk/setup_ubuntu.htm">
-        開發環境(Ubuntu)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/sdk/setup_windows.htm">
-        開發環境(Windows)</a><br>
-
-&oplus;
-<b>Dual Boot</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dualboot/ili9340.htm">
-    支援ILI9340</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dualboot/s6d04m0x21.htm">
-    支援S6D04M0X21</a><br>
-
-&oplus;
-<b>Dingux</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/os_minisd.htm">
-    安裝系統(MiniSD)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba.htm">
-    build fba</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba-sdl.htm">
-    build fba-sdl</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba-capex.htm">
-    build fba-capex</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fceu.htm">
-    build fceu</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_uboot.htm">
-    build uboot</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_snes9x.htm">
-    build snes9x</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_gnuboy.htm">
-    build gnuboy</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_hwinit.htm">
-    build hwinit</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_kernel.htm">
-    build kernel</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_psx4all.htm">
-    build psx4all</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_gmenu2x.htm">
-    build gmenu2x</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_openbor.htm">
-    build openbor</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_mame4all.htm">
-    build mame4all</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_libao-1.2.0.htm">
-    build libao-1.2.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/port_ili9340.htm">
-    移植ILI9340驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/port_s6d04m0x21.htm">
-    移植S6D04M0X21驅動程式</a><br>
-
-&oplus;
-<b>OpenDingux</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/os_qemu.htm">
-    安裝系統(QEMU)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/os_minisd.htm">
-    安裝系統(MiniSD)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_qemu.htm">
-    build qemu</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_kernel.htm">
-    build kernel</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_ubiboot.htm">
-    build ubiboot</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_buildroot.htm">
-    build buildroot</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_ili9338.htm">
-    修正ILI9338青藍色問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/port_ili9340.htm">
-    移植ILI9340驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/port_s6d04m0x21.htm">
-    移植S6D04M0X21驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/sdcard_64g.htm">
-    如何使用超過64G的SDCard</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_itemx_follow_item.htm">
-    解決"@itemx must follow @item"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_end_multitable.htm">
-    解決"no matching @end multitable"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_pl_defined.htm">
-    解決"Can't use 'defined(@array)' ... line 373."</a><br>
 <br><br><br><br>
 
 <div id="x760p"></div>
