--- a/handheld/pandora_rebirth_spec.htm
+++ b/handheld/pandora_rebirth_spec.htm
@@ -4,9 +4,6 @@
 
 <h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - <b>簡要規格</b></h3>
 <hr size="1"><br>
-<p>
-簡要規格
-</p>
 <table>
     <tr><th>CHIP</th><td>TI OMAP3530</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A8 600MHz</td></tr>
@@ -17,7 +14,7 @@
     <tr><th>SLOT</th><td>SD (x2)</td></tr>
     <tr><th>PORT</th><td>USB A, USB Mini B, 3.5mm Jack</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
-    <tr><th>BATTERY</th><td>4000mA</td></tr>
+    <tr><th>BATTERY</th><td>3.7v 4000mA</td></tr>
     <tr><th>DIMENSION</th><td>140.29mm x 83.48mm x 29.25mm</td></tr>
     <tr><th>WEIGHT</th><td>320g</td></tr>
 </table>
