--- a/index.htm
+++ b/index.htm
@@ -534,28 +534,24 @@ Dingoo A320</h3>
 <a href="handheld/a320_button.htm">
 更換按鈕</a><br>
 
-&lowast;
-<a href="handheld/a320/uart.htm">
+&dash;
+<a href="handheld/a320_uart.htm">
 焊接UART接頭</a><br>
 
-&lowast;
-<a href="handheld/a320/psx_ultra.htm">
-PSX Ultra Ripper</a><br>
-
-&lowast;
-<a href="handheld/a320/tft_ili9325.htm">
+&dash;
+<a href="handheld/a320_ili9325.htm">
 更換螢幕(2.8吋 TFT ILI9325)</a><br>
 
-&lowast;
-<a href="handheld/a320/ips_ili9340.htm">
+&dash;
+<a href="handheld/a320_ili9340.htm">
 更換螢幕(2.6吋 IPS ILI9340)</a><br>
 
-&lowast;
-<a href="handheld/a320/ips_s6d04m0x21.htm">
+&dash;
+<a href="handheld/a320_s6d04m0x21.htm">
 更換螢幕(2.8吋 IPS S6D04M0X21)</a><br>
 
-&lowast;
-<a href="handheld/a320/oled_s6e63d6.htm">
+&dash;
+<a href="handheld/a320_s6e63d6.htm">
 更換螢幕(2.8吋 OLED S6E63D6)</a><br>
 
 &oplus;
