--- a/index.htm
+++ b/index.htm
@@ -554,50 +554,46 @@ Dingoo A320</h3>
 <a href="handheld/a320_s6e63d6.htm">
 更換螢幕(2.8吋 OLED S6E63D6)</a><br>
 
+&dash;
+<a href="handheld/a320_unbrick.htm">
+Unbrick Tool</a><br>
+
 &oplus;
 <b>Dingoo</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/unbrick.htm">
-    Unbrick Tool</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingoo_setup.htm">
+    安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/parse_app.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingoo_parse_app.htm">
     解析App文件格式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/os_flash.htm">
-    安裝系統(Flash)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/fix_ili9325.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingoo_fix_ili9325.htm">
     修正ILI9325豎紋問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/patch_ili9340.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingoo_patch_ili9340.htm">
     Patch ILI9338.DL(支援ILI9340)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingoo/patch_s6d04m0x21.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingoo_patch_s6d04m0x21.htm">
     Patch ILI9338.DL(支援S6D04M0X21)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    S2D SDK<br>
+    <b>S2D SDK</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/s2d/setup_windows.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/a320_dingoo_s2d_setup.htm">
         開發環境(Windows)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Dingoo SDK<br>
+    <b>Dingoo SDK</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/sdk/setup_ubuntu.htm">
-        開發環境(Ubuntu)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="handheld/a320/dingoo/sdk/setup_windows.htm">
-        開發環境(Windows)</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/a320_dingoo_sdk_setup.htm">
+        開發環境(Linux)</a><br>
 
 &oplus;
 <b>Dual Boot</b><br>
