--- a/index.htm
+++ b/index.htm
@@ -596,141 +596,50 @@ Unbrick Tool</a><br>
         開發環境(Linux)</a><br>
 
 &oplus;
-<b>Dual Boot</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dualboot/ili9340.htm">
-    支援ILI9340</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dualboot/s6d04m0x21.htm">
-    支援S6D04M0X21</a><br>
-
-&oplus;
 <b>Dingux</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/os_minisd.htm">
-    安裝系統(MiniSD)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingux_setup.htm">
+    安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba.htm">
-    build fba</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingux_build_uboot.htm">
+    Build U-Boot</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba-sdl.htm">
-    build fba-sdl</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingux_build_hwinit.htm">
+    Build HWInit</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fba-capex.htm">
-    build fba-capex</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_fceu.htm">
-    build fceu</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_uboot.htm">
-    build uboot</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_snes9x.htm">
-    build snes9x</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_gnuboy.htm">
-    build gnuboy</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_hwinit.htm">
-    build hwinit</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_kernel.htm">
-    build kernel</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_psx4all.htm">
-    build psx4all</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_gmenu2x.htm">
-    build gmenu2x</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_openbor.htm">
-    build openbor</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_mame4all.htm">
-    build mame4all</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/build_libao-1.2.0.htm">
-    build libao-1.2.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/port_ili9340.htm">
-    移植ILI9340驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/dingux/port_s6d04m0x21.htm">
-    移植S6D04M0X21驅動程式</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_dingux_build_kernel.htm">
+    Build Kernel</a><br>
 
 &oplus;
 <b>OpenDingux</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/os_qemu.htm">
-    安裝系統(QEMU)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_setup.htm">
+    安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/os_minisd.htm">
-    安裝系統(MiniSD)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_qemu.htm">
+    如何使用QEMU</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_qemu.htm">
-    build qemu</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_build_kernel.htm">
+    Build Kernel</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_kernel.htm">
-    build kernel</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_build_ubiboot.htm">
+    Build UBIBoot</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_ubiboot.htm">
-    build ubiboot</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_build_qemu.htm">
+    Build qemu-dingoo</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/build_buildroot.htm">
-    build buildroot</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_ili9338.htm">
-    修正ILI9338青藍色問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/port_ili9340.htm">
-    移植ILI9340驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/port_s6d04m0x21.htm">
-    移植S6D04M0X21驅動程式</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/sdcard_64g.htm">
-    如何使用超過64G的SDCard</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_itemx_follow_item.htm">
-    解決"@itemx must follow @item"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_end_multitable.htm">
-    解決"no matching @end multitable"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/a320/opendingux/fix_pl_defined.htm">
-    解決"Can't use 'defined(@array)' ... line 373."</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/a320_opendingux_fix_pl_defined.htm">
+    解決Can't use 'defined(@array)' ... line 373問題</a><br>
 <br><br><br><br>
 
 <div id="pyra"></div>
