--- a/reverse.htm
+++ b/reverse.htm
@@ -19,8 +19,8 @@
 
 <div id="page"><br><br>
 <p>
-    <a href="#idapro">      <img src="img/photos/idapro.jpg"        class="t0" title="IDA Pro"/></a>
     <a href="#ghidra">      <img src="img/photos/ghidra.jpg"        class="t0" title="Ghidra"/></a>
+    <a href="#idapro">      <img src="img/photos/idapro.jpg"        class="t0" title="IDA Pro"/></a>
     <a href="#ollydbg">     <img src="img/photos/ollydbg.jpg"       class="t0" title="OllyDbg"/></a>
     <a href="#virus">       <img src="img/photos/virus.jpg"         class="t0" title="病毒樣本分析"/></a>
     <a href="#gdb">         <img src="img/photos/gdb.jpg"           class="t0" title="GDB"/></a>
@@ -33,6 +33,24 @@
 
 <div id="page"><br><br>
 <p>
+<div id="ghidra"></div>
+<h3><img src="img/photos/ghidra.jpg" class="floatLeft"/>
+Ghidra</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="reverse/ghidra_setup.htm">
+安裝環境</a><br>
+
+&dash;
+<a href="reverse/ghidra_build.htm">
+Build Ghidra</a><br>
+
+&dash;
+<a href="reverse/ghidra_scale.htm">
+如何設定UI Scale成兩倍大</a><br>
+<br><br><br><br>
+
 <div id="idapro"></div>
 <h3><img src="img/photos/idapro.jpg" class="floatLeft"/>
 IDA Pro</h3>
@@ -188,24 +206,6 @@ Patch License(v7.3)</a><br>
 &lowast;
 <a href="reverse/idapro/auto_hide.htm">
 如何關閉Auto Hide Function功能</a><br>
-<br><br><br><br>
-
-<div id="ghidra"></div>
-<h3><img src="img/photos/ghidra.jpg" class="floatLeft"/>
-Ghidra</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="reverse/ghidra/setup.htm">
-安裝環境</a><br>
-
-&lowast;
-<a href="reverse/ghidra/build.htm">
-build ghidra</a><br>
-
-&lowast;
-<a href="reverse/ghidra/scale.htm">
-如何設定UI Scale成兩倍大</a><br>
 <br><br><br><br>
 
 <div id="ollydbg"></div>
