Debian Fixed Python3 env. issue

--- a/system.htm
+++ b/system.htm
@@ -134,6 +134,10 @@ shell script "$、{}、%、#"用途</a><br>
 <a href="system/debian/vim_ctrl_s.htm">
 解決"vim CTRL+S"問題</a><br>
 
+&dash;
+<a href="system/debian_fix_python3_env.htm">
+解決Python3 externally-managed-environment問題</a><br>
+
 &lowast;
 <a href="system/debian/fix_gcc-pie.htm">
 解決gprof沒有輸出訊息的問題</a><br>
