Ghidra How to use pyhidra.

--- a/reverse.htm
+++ b/reverse.htm
@@ -49,6 +49,17 @@ Build Ghidra</a><br>
 &dash;
 <a href="reverse/ghidra_scale.htm">
 如何設定UI Scale成兩倍大</a><br>
+
+&oplus;
+<b>Pyhidra</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/ghidra_pyhidra_setup.htm">
+    安裝環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/ghidra_pyhidra_entrypoint.htm">
+    EntryPoint</a><br>
 <br><br><br><br>
 
 <div id="idapro"></div>
