Ghidra How to use python.

--- a/reverse.htm
+++ b/reverse.htm
@@ -60,6 +60,13 @@ Build Ghidra</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="reverse/ghidra_pyhidra_entrypoint.htm">
     EntryPoint</a><br>
+
+&oplus;
+<b>Python</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/ghidra_python_entrypoint.htm">
+    EntryPoint</a><br>
 <br><br><br><br>
 
 <div id="idapro"></div>
