--- a/reverse/ghidra_pyhidra_entrypoint.htm
+++ b/reverse/ghidra_pyhidra_entrypoint.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../reverse.htm">逆向工程</a> - Ghidra - Pyhidra - <b>安裝環境</b></h3>
+<h3><a href="../reverse.htm">逆向工程</a> - Ghidra - Pyhidra - <b>EntryPoint</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
