Pandora Added keymap.

--- a/index.htm
+++ b/index.htm
@@ -359,6 +359,10 @@ UART改造</a><br>
     修改DPI</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_keymap.htm">
+    Keymap</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_mark3_keycode.htm">
     Keycode</a><br>
 
