Miyoo Mini Plus How to build mario war.

--- a/index.htm
+++ b/index.htm
@@ -6656,6 +6656,10 @@ repack uImage.xz</a><br>
 <a href="handheld/miyoo-mini-plus/fatload.htm">
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 
+&dash;
+<a href="handheld/miyoo_mini_plus_build_smw.htm">
+Build Super Mario War</a><br>
+
 &oplus;
 <b>Stock</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
