Miyoo Mini Refined.

--- a/handheld/a320_spec.htm
+++ b/handheld/a320_spec.htm
@@ -7,7 +7,7 @@
 <table>
   <tr><th>CHIP</th><td>Ingenic JZ4732</td></tr>
   <tr><th>CPU</th><td>MIPS32 rev1 336MHz</td></tr>
-  <tr><th>MEMORY</th><td>32MB RAM and 4GB Flash</td></tr>
+  <tr><th>MEMORY</th><td>RAM 32MB<br>Flash 4GB</td></tr>
   <tr><th>DISPLAY</th><td>2.8" 320x240</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
   <tr><th>SLOT</th><td>MiniSD</td></tr>
