--- a/handheld/pandora_rebirth_spec.htm
+++ b/handheld/pandora_rebirth_spec.htm
@@ -8,12 +8,12 @@
     <tr><th>CHIP</th><td>TI OMAP3530</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A8 600MHz</td></tr>
     <tr><th>GPU</th><td>PowerVR SGX530</td></tr>
-    <tr><th>MEMORY</th><td>512MB RAM and 512MB Flash</td></tr>
+    <tr><th>MEMORY</th><td>RAM 512MB<br>Flash 512MB</td></tr>
     <tr><th>DISPLAY</th><td>4.3" 800x480 (Resistive)</td></tr>
-    <tr><th>INPUT</th><td>GamePad, JoyStick and QWERTY</td></tr>
+    <tr><th>INPUT</th><td>GamePad<br>JoyStick (x2)<br>QWERTY</td></tr>
     <tr><th>SLOT</th><td>SD (x2)</td></tr>
-    <tr><th>PORT</th><td>USB A, USB Mini B, 3.5mm Jack</td></tr>
-    <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
+    <tr><th>PORT</th><td>USB A<br>USB Mini B<br>3.5mm Jack</td></tr>
+    <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v2.0</td></tr>
     <tr><th>BATTERY</th><td>3.7v 4000mA</td></tr>
     <tr><th>DIMENSION</th><td>140.29mm x 83.48mm x 29.25mm</td></tr>
     <tr><th>WEIGHT</th><td>320g</td></tr>
