--- a/index.htm
+++ b/index.htm
@@ -651,9 +651,9 @@ Unbrick Tool</a><br>
 Miyoo Mini</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/miyoo-mini/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/miyoo_mini_spec.htm">
+簡要規格</a><br>
 
 &lowast;
 <a href="handheld/miyoo-mini/review2.htm">
