--- a/handheld/a320_spec.htm
+++ b/handheld/a320_spec.htm
@@ -11,7 +11,7 @@
   <tr><th>DISPLAY</th><td>2.8" 320x240</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
   <tr><th>SLOT</th><td>MiniSD</td></tr>
-  <tr><th>PORT</th><td>USB Mini B</td></tr>
+  <tr><th>PORT</th><td>USB Mini B<br>3.5mm Jack</td></tr>
   <tr><th>BATTERY</th><td>3.7v 1800mA</td></tr>
   <tr><th>DIMENSION</th><td>125mm x 55.5mm x 14mm</td></tr>
   <tr><th>WEIGHT</th><td>110g</td></tr>
