--- a/index.htm
+++ b/index.htm
@@ -413,6 +413,10 @@ UART改造</a><br>
     如何從SD開機</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_runlevel_3.htm">
+    如何跑Runlevel 3</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_usb_ssh.htm">
     如何透過USB Mini B登入SSH</a><br>
 
