--- a/phone.htm
+++ b/phone.htm
@@ -173,6 +173,10 @@ Mugen Power 3.7V 2400mA電池</a><br>
     如何查看電池百分比</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_usb_ssh.htm">
+    如何透過USB連接SSH</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_root.htm">
     解決Root空間不足問題</a><br>
 
